site-hugo/content/xap/9.7/admin/index.markdown
---
type: post97
title:  Administrators Guide
categories: XAP97ADM
weight: 300
canonical: auto
---


The Administrator's Guide will introduce you to the Management Center and Web Management Console which are used to deploy, configure and monitor XAP components. It also provides guidelines on how to setup your network and how to troubleshoot your XAP application.

 <br>

- [Management Center](./gigaspaces-management-center.html){{<wbr>}}
GigaSpaces Management Center is a GUI that allows you to view spaces, containers, and clusters and configure them, using the Space Browser tab. You can also deploy and manage services using the Deployments tab.

- [Web Management Console](./web-management-console.html){{<wbr>}}
The web management console is a new user interface for XAP allowing users to deploy, manage and monitor their Processing Units and Applications

- [Logging](./logging-overview.html){{<wbr>}}
This section explains how you can configure logging with XAP. We will show you how you can format the log output, choose file names and rollover policies.

- [Administration tools](./administration-tools.html){{<wbr>}}
This guide will explain the command line interface that is used to deploy, manage and monitor Processing Units and Applications.

- [Runtime configuration](./runtime-configuration.html){{<wbr>}}
This section lists and explains the different runtime configuration parameters.

- [Network Configuration](./network.html){{<wbr>}}
In this guide we will explain how to configure the network in order for XAP to work properly .

- [Monitoring](./monitoring.html){{<wbr>}}
In this guide you will find information on how to monitor XAP and your deployed application.

- [Performance Tuning](./tuning.html) {{<wbr>}}
In this guide you will find information on how to tune your XAP application. Amongst the topics covered are JVM tuning, thread usage and benchmarking.

- [Benchmarking](./benchmarking.html){{<wbr>}}
Performance benchmarks with XAP's In-Memory Data Grid mainly involve testing latency and throughput.

- [Troubleshooting](./troubleshooting.html){{<wbr>}}
In this guide you will find useful information on how to troubleshoot your XAP application.

- [Moving into Production Checklist](./moving-into-production-checklist.html){{<wbr>}}
The following list should provide you with the main activities to be done prior moving your system into production.





