site-hugo/content/xap/10.1/admin/index.markdown
---
type: post101
title:  Administrators Guide
categories: XAP101ADM
weight: 300
canonical: auto
---


The Administrator's Guide will introduce you to the Management Center and Web Management Console which are used to deploy, configure and monitor XAP components. It also provides guidelines on how to setup your network and how to troubleshoot your XAP application.

<br>

{{%fpanel%}}

[Management Center](./gigaspaces-management-center.html){{<wbr>}}
GigaSpaces Management Center is a GUI that allows you to view spaces, containers, and clusters and configure them, using the Space Browser tab. You can also deploy and manage services using the Deployments tab.

[Web Management Console](./web-management-console.html){{<wbr>}}
The web management console is a new user interface for XAP allowing users to deploy, manage and monitor their Processing Units and Applications

[Data grid clustering](./data-grid-clustering.html){{<wbr>}}
This section describe into details how the In-Memory-Data-Grid clustering works. It goes into the details of the fail-over, load-balancing, and replication facilities used.

[Service Level Agreement](./the-sla-overview.html){{<wbr>}}
The XAP runtime environment (Service Grid) provides Service Level Agreement driven capabilities.

[Memory Management](./memory-management-overview.html){{<wbr>}}
In this section we will explain the different Space cache policies, memory usage, and rules for exceeding physical memory capacity.

[MemoryXtend](./memoryxtend.html){{<wbr>}}
XAP 10 introduces a new Storage interface allowing Blob/Block/external type storage to act as a natural memory space for the IMDG.



[Logging](./logging-overview.html){{<wbr>}}
This section explains how you can configure logging with XAP. We will show you how you can format the log output, choose file names and rollover policies.

[Administration tools](./administration-tools.html){{<wbr>}}
This guide will explain the command line interface that is used to deploy, manage and monitor Processing Units and Applications.

[Runtime configuration](./runtime-configuration.html){{<wbr>}}
This section lists and explains the different runtime configuration parameters.

[Network Configuration](./network.html){{<wbr>}}
In this guide we will explain how to configure the network in order for XAP to work properly .

[Monitoring](./monitoring.html){{<wbr>}}
In this guide you will find information on how to monitor XAP and your deployed application.

[Performance Tuning](./tuning.html) {{<wbr>}}
In this guide you will find information on how to tune your XAP application. Amongst the topics covered are JVM tuning, thread usage and benchmarking.

[Benchmarking](./benchmarking.html){{<wbr>}}
Performance benchmarks with XAP's In-Memory Data Grid mainly involve testing latency and throughput.

[Quiesce Mode](./quiescemode.html){{<wbr>}}
Processing Units can be configured to be put into maintenance mode. Once a processing unit has entered into maintenance mode, it will reject all data-related operations with an exception. This is useful when performing a safe shutdown or for a rolling system upgrade.


[Troubleshooting](./troubleshooting.html){{<wbr>}}
In this guide you will find useful information on how to troubleshoot your XAP application.

[Moving into Production Checklist](./moving-into-production-checklist.html){{<wbr>}}
The following list should provide you with the main activities to be done prior moving your system into production.

{{%/fpanel%}}



